# zlipy-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_files_filtering.py  test_with_pytest.py
zlipy/: api_client.py  config.py
zlipy/cli/: app.py
zlipy/config/: configs.py  factory.py  interfaces.py
zlipy/domain/events/: __init__.py
zlipy/domain/filesfilter/: constants.py  factory.py  filters.py  interfaces.py  loaders.py
zlipy/domain/tools/: interfaces.py  search.py
zlipy/services/: embeddings.py
zlipy/services/api/: clients.py  constants.py  interfaces.py
zlipy/services/client/: clients.py  factory.py
zlipy/services/errors_handler/: handler.py
